# python-template

./: .gitignore  .pre-commit-config.yaml  README.md
sources/: .prospector.yml  pyproject.toml
sources/requirements/: local.txt
