[tool.poetry]
name = "sources"
version = "0.1.0"
description = ""
authors = ["AsheKR <tech@ashe.kr>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
prospector = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
